# fake-cdn

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: release.yml  release.yml.bak  release2.yml
conf/: conf.toml
src/: cli.rs  conf.rs  files.rs  lib.rs  main.rs  utils.rs
src/subcmds/: init.rs  install_service.rs  mod.rs  web.rs
tests/: upload_test.py
