[package]
name = "fake-cdn"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
clap = "4.5.18"
lazy_static = "1.5.0"
# rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
structopt = "0.3.26"
tokio = { version = "1.40.0", features= ["fs"] }
toml = "0.8.19"
