[package]
name = "fake-cdn"
version = "0.1.0"
edition = "2021"

# [lib]
# proc-macro = true

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"

actix-web = "4.11.0"
clap = "4.5.39"
flate2 = "1.1.1"
lazy_static = "1.5.0"
log = "0.4.27"
colog = "1.3.0"
# rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
structopt = "0.3.26"
tar = "0.4.44"
tokio = { version = "1.41.1", features= ["fs"] }
toml = "0.8.22"
rand = "0.8"
